spade-tests/src/snapshots/spade_tests__typeinference__good_error_message_for_reg_pattern_type_mismatch_with_implicit_type.snap
---
source: spade-tests/src/typeinference.rs
---
entity test(clk: clock) -> bool {
    reg(clk) (sample_i, audio_val) = {
        true
    };

    true
}


error: Pattern type mismatch
  ┌─ testinput:2:14
  │  
2 │       reg(clk) (sample_i, audio_val) = {
  │                ^^^^^^^^^^^^^^^^^^^^^ expected bool
  │ ╭──────────────────────────────────────'
3 │ │         true
4 │ │     };
  │ ╰─────' because this has type bool
  │  
  = Expected: bool
  =      Got: (_, _)


